--- a/aux/commands.tex
+++ b/aux/commands.tex
@@ -7,6 +7,15 @@
 \usepackage[noabbrev,capitalize]{cleveref}
 \usepackage[all,2cell]{xy} \UseAllTwocells \SilentMatrices
 
+%% For algorithms %% following tutorial from Shanto Roy
+\usepackage[linesnumbered,ruled,vlined]{algorithm2e}
+        %%% Coloring the comment as blue
+\newcommand\mycommfont[1]{\footnotesize\ttfamily\textcolor{blue}{#1}}
+\SetCommentSty{mycommfont}
+\SetKwInput{KwInput}{Input}                % Set the Input
+\SetKwInput{KwOutput}{Output}              % set the Output
+
+
 %MARGINS
 
 \setlength{\textwidth}{\paperwidth}
