Equivalence with SU diagonal

--- a/Poissons.bib
+++ b/Poissons.bib
@@ -18,13 +18,6 @@
   pages = {\texttt{arXiv:2008.05295}},
 }
 
-@article{LA21,
-  title = {The Diagonal of the Operahedra},
-  author = {{Laplante-Anfossi}, Guillaume},
-  year = {2022},
-  journal = {Advances in Mathematics},
-  pages = {to appear}
-}
 
 @book{LodayVallette12,
   title = {Algebraic Operads},
@@ -86,3 +79,63 @@
   publisher={IEEE}
 }
 
+@misc{saneblidzeComparingDiagonalsAssociahedra2022,
+  title = {Comparing {{Diagonals}} on the {{Associahedra}}},
+  author = {Saneblidze, Samson and Umble, Ronald},
+  year = {2022},
+  month = aug,
+  number = {arXiv:2207.08543},
+  eprint = {2207.08543},
+  eprinttype = {arxiv},
+  primaryclass = {math},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2207.08543},
+  abstract = {We prove that the formula for the diagonal approximation \$\textbackslash Delta\_\{K\}\$ on J. Stasheff's \$n\$-dimensional associahedron \$K\_\{n+2\}\$ derived by the current authors in 2004 agrees with the "magical formula" for the diagonal approximation \$\textbackslash Delta\_\{K\}\^\{\textbackslash prime\}\$ first derived by Markl and Shnider in 2006 and more recently by Masuda, Thomas, Tonks, and Vallette in 2021.},
+  archiveprefix = {arXiv},
+  keywords = {Mathematics - Algebraic Topology,Mathematics - Combinatorics,Primary 55P48; 55P99; Secondary 52B05; 52B11},
+  file = {/Users/mac/Documents/Bibliothèque/Recherche/Saneblidze_Umble_2022_Comparing Diagonals on the Associahedra.pdf;/Users/mac/Zotero/storage/HV684S8W/2207.html}
+}
+
+@article{SaneblidzeUmble04,
+  title = {Diagonals on the Permutahedra, Multiplihedra and Associahedra},
+  author = {Saneblidze, Samson and Umble, Ronald},
+  year = {2004},
+  journal = {Homology, Homotopy and Applications},
+  volume = {6},
+  number = {1},
+  pages = {363--411},
+  fjournal = {Homology, Homotopy and Applications}
+}
+
+@misc{vejdemo-johanssonEnumeratingSaneblidzeUmbleDiagonal2007,
+  title = {Enumerating the {{Saneblidze-Umble}} Diagonal Terms},
+  author = {{Vejdemo-Johansson}, Mikael},
+  year = {2007},
+  month = jul,
+  number = {arXiv:0707.4399},
+  eprint = {0707.4399},
+  eprinttype = {arxiv},
+  primaryclass = {math},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.0707.4399},
+  abstract = {The author presents a computer implementation, calculating the terms of the Saneblidze-Umble diagonals on the permutahedron and the associahedron. The code is analyzed for correctness and presented in the paper, the source code of which simultaneously represents both the paper and the program.},
+  archiveprefix = {arXiv},
+  keywords = {52B05; 18D50,Mathematics - Algebraic Topology,Mathematics - Combinatorics},
+  file = {/Users/mac/Documents/Bibliothèque/Recherche/Vejdemo-Johansson_2007_Enumerating the Saneblidze-Umble diagonal terms.pdf;/Users/mac/Zotero/storage/M6ARZVMD/0707.html}
+}
+
+@article{LA21,
+  title = {The Diagonal of the Operahedra},
+  author = {{Laplante-Anfossi}, Guillaume},
+  year = {2022},
+  month = aug,
+  journal = {Advances in Mathematics},
+  volume = {405},
+  pages = {108494},
+  issn = {0001-8708},
+  doi = {10.1016/j.aim.2022.108494},
+  abstract = {The primary goal of this article is to set up a general theory of coherent cellular approximations of the diagonal for families of polytopes by developing the method introduced by N. Masuda, A. Tonks, H. Thomas and B. Vallette. We apply this theory to the study of the operahedra, a family of polytopes ranging from the associahedra to the permutahedra, and which encodes homotopy operads. After defining Loday realizations of the operahedra, we make a coherent choice of cellular approximations of the diagonal, which leads to a compatible topological cellular operad structure on them. This gives a model for topological and algebraic homotopy operads and an explicit functorial formula for their tensor product.},
+  langid = {english},
+  keywords = {Approximation of the diagonal,Fiber polytopes,Generalized permutahedra,Hyperplane arrangements,Operads,Polytopes},
+  file = {/Users/mac/Zotero/storage/RGEQDUXW/S0001870822003115.html}
+}
