--- a/sec/facets.tex
+++ b/sec/facets.tex
@@ -4,7 +4,7 @@
 \label{s:facets}
 
 In this section we establish a bijection between the facets of $\triangle$ and a family of pairs of unordered partitions introduced and enumerated in a series of 3 papers \cite{chen1969computer,chen1971tables,kajitani1982number}. An intermediary bijection to a type of bipartite tree is of particular importance and provides [...].
-In particular, we obtain that the number of facets in $\triangle_n$ is $2(n+1)^{n-2}$ (\OEIS{A007334}), and more precisely that the pairs of dimension $(k,n-k)$ are counted by the formula $\frac{1}{k+1}\binom{n+1}{k}(k+1)^{n-k}(n+1-k)^{k}$. \BDO{formula corrected to match the "real" dimension}
+In particular, we obtain that the number of facets in $\triangle_n$ is $2(n+1)^{n-2}$ (\OEIS{A007334}), and more precisely that the pairs of dimension $(k,n-k)$ are counted by the formula $\frac{1}{k+1}\binom{n+1}{k}(k+1)^{n-k}(n+1-k)^{k}$. 
 
 \Guillaume{Notations to be uniformized...}
 
@@ -18,12 +18,12 @@ A set of \emph{distinct representatives} of a partition is a set $R\subset [n]$ 
 \begin{definition}
 A pair of partitions $P=(P_L,P_R):=(\cup_{l\in L} P_l , \cup_{r\in R} P_r)$ is
 \begin{itemize}
-    \item \emph{complimentary} if there exists $I\subset [n]$ and $p \in I$ such that $I$ and $(V\setminus I) \cup \{p\}$ are distinct representatives of $P_L$ and $P_R$, respectively.
-    \item \emph{essential} if there does not exists proper subsets $K \subset [n], L'\subset L$ and $R'\subset R$ such that $P':=(P_{L'},P_{R'})$ is a complimentary partition of $K$.
+    \item \emph{complementary} if there exists $I\subset [n]$ and $p \in I$ such that $I$ and $(V\setminus I) \cup \{p\}$ are distinct representatives of $P_L$ and $P_R$, respectively.
+    \item \emph{essential} if there does not exists proper subsets $K \subset [n], L'\subset L$ and $R'\subset R$ such that $P':=(P_{L'},P_{R'})$ is a complementary partition of $K$.
 \end{itemize}
 \end{definition}
 
-We shall denote the set of all essential complimentary pairs of partitions by $\EC$.
+We shall denote the set of all essential complementary pairs of partitions by $\EC$.
 Let us emphasize that the pairs of partitions of $\EC$ are \emph{unordered}.
 
 \begin{example}
@@ -63,10 +63,10 @@ In this section we denote by $\OP$ be the set of pairs of ordered partitions of 
 
 \begin{thm}
 \label{thm:facets}
-Facets of the diagonal and essential complimentary partitions are in bijection through the inverse functions $u:\OP \to \EC$ and $o:\EC\to \OP$, where
+Facets of the diagonal and essential complementary partitions are in bijection through the inverse functions $u:\OP \to \EC$ and $o:\EC\to \OP$, where
 \begin{enumerate}
     \item The function $u$ forgets the order of the ordered partition pair.
-    \item The function $o$ uniquely orders an essential complimentary partition pair via the minimal $(I,J)$-pairs defining the diagonal. 
+    \item The function $o$ uniquely orders an essential complementary partition pair via the minimal $(I,J)$-pairs defining the diagonal. 
 \end{enumerate}
 \end{thm}
 We shall prove this theorem by establishing the necessary total order, showing that the functions are well defined, and then showing that they are injective.
@@ -115,7 +115,7 @@ Since $p_{ac}= (p_{ab} \cup p_{bc}) \setminus (p_{ab} \cap p_{bc})$, we have $$ 
 The proof for $P_R$ is similar. 
 \end{proof}
 
-This order far from being arbitrary provides the unique way to order an essential complimentary partition pair into an ordered partition pair of $\triangle$, as we shall demonstrate next.
+This order far from being arbitrary provides the unique way to order an essential complementary partition pair into an ordered partition pair of $\triangle$, as we shall demonstrate next.
 
 First we need a geometrical lemma. 
 \begin{proposition}
@@ -136,7 +136,7 @@ First we need a geometrical lemma.
 
 \begin{lemma} 
 \label{o well defined}
-The function $o:\EC \to \OP$ that orders an essential complimentary pair is well defined.
+The function $o:\EC \to \OP$ that orders an essential complementary pair is well defined.
 \end{lemma}
 
 \begin{proof}
@@ -178,7 +178,7 @@ and this can only happen if $P_r$ comes before $P_{r'}$.
 To complete the proof of \cref{thm:facets}, it remains to show that both $u:\OP \to \EC$ and $o:\EC\to \OP$ are injective, with the other function being their inverse.
 
 \begin{proof}[{Proof of \cref{thm:facets}}]
-The forgetful function $u$ is clearly the inverse to $o$ as forgetting any assigned order will clearly return the original essential complimentary partition pair. 
+The forgetful function $u$ is clearly the inverse to $o$ as forgetting any assigned order will clearly return the original essential complementary partition pair. 
 The ordering function $o$ is the inverse to $u$ as it returns the sole ordering of the sub-partitions which is compatible with the $D(n)$ conditions.
 \end{proof}
 
@@ -216,8 +216,8 @@ We denote by $\mathcal{B}$ this set of labels.
 Moreover, the labeled black vertices are different from the root, hence they should have a white parent : there are $n+1-k$ ways to choose the parent of any labeled black vertex. 
 We thus have  $(n+1-k)^{k}$ ways to build corollas with labeled black leaves and a white root, called bi-colored corollas (or sometimes just corollas) in the sequel.
 
-Finally, we arrange bi-colored corollas in a rooted bipartite tree by adapting the algorithm which convert a Prüfer code to a tree. 
-Here what is called \emph{Prüfer code} is a word of length $n-k$ over the alphabet $\mathcal{B} \cup \{\bullet\}$, where $\bullet$ stands for the non-labeled black vertex. 
+Finally, we arrange bi-colored corollas in a rooted bipartite tree by adapting the algorithm which convert a Pr\"ufer code to a tree. 
+Here what is called \emph{Pr\"ufer code} is a word of length $n-k$ over the alphabet $\mathcal{B} \cup \{\bullet\}$, where $\bullet$ stands for the non-labeled black vertex. 
 Let us start with a word $c=c_1 \ldots c_{n-k} \bullet$ of length $n-k+1$ and the set $\mathcal{T}=\mathcal{S} \cup \{\bullet\}$ of $n-k+2$ bi-colored corollas augmented with the unlabeled black vertex. 
 We apply Algorithm \ref{PruferWtoT}. Let us first prove it termination and correctness. The equality 
 $\operatorname{length}(c)=\operatorname{Card}(\mathcal{T})-1$ is a loop invariant for the While loop: indeed at each iteration of the loop, the length of $c$ and the number of elements in $\mathcal{T}$ decrease exactly by one. It ensures the termination of the loop and the fact that $\mathcal{T}$ contains a unique element when exiting the loop. Moreover, the set of trees $\mathcal{T}$ contains at each steps exactly one unlabeled black vertex, $k$ labeled black vertices and $n-k+1$ white vertices. Finally, when adding an edge between two trees, one can only get a tree. Moreover, as the edge is added between a white root and the label of a black vertex, the obtained tree is indeed bipartite.
@@ -236,10 +236,10 @@ $\operatorname{length}(c)=\operatorname{Card}(\mathcal{T})-1$ is a loop invarian
       Remove the first letter of $c$ \tcp*{Decrease the length of $c$ by one}
   }
   {Return the unique element of $\mathcal{T}$}
-  \caption{Prüfer algorithm : from a word to a tree \label{PruferWtoT}}
+  \caption{Pr\"ufer algorithm : from a word to a tree \label{PruferWtoT}}
 \end{algorithm}
 
-To prove that this algorithm defines a bijection between the pairs of Prüfer code and set of bipartite rooted trees, let us give the algorithm which convert a rooted bipartite tree in such a pair in Algorithm \label{PruferTtoW}.
+To prove that this algorithm defines a bijection between the pairs of Pr\"ufer code and set of bipartite rooted trees, let us give the algorithm which convert a rooted bipartite tree in such a pair in Algorithm \label{PruferTtoW}.
 
 
 \begin{algorithm}[!ht]
@@ -255,7 +255,7 @@ To prove that this algorithm defines a bijection between the pairs of Prüfer co
       $c \leftarrow c$ concatenated with label of the parent of t \tcp*{This label is a black vertex}
       Remove the edge between t and its parent: the root part goes in $A$ and the corolla in $\mathcal{T}$ \tcp*{Increase the cardinality of $\mathcal{T}$ by one}}
   {  Return the pair $(c,\mathcal{T} \cup A)$}
-  \caption{Prüfer algorithm : from a tree to a word \label{PruferTtoW}}
+  \caption{Pr\"ufer algorithm : from a tree to a word \label{PruferTtoW}}
 \end{algorithm}
 
 This second algorithm terminates as the number of white vertices decreases strictly by one at each iterations. Moreover, every letter added to $c$ is the label of a black vertices, and every tree added to $\mathcal{T}$ is a bi-colored corolla or $\bullet$ (the tree with only the non-labeled black root). Finally, the cardinality of the set of bipartite trees is one more than the length of $c$. As this algorithm is the classical reverse algorithm of the first one, it ends the proof.
@@ -266,7 +266,7 @@ This second algorithm terminates as the number of white vertices decreases stric
 \begin{figure}[!h]
 \includegraphics[scale=0.5]{Images/ExplePrufer.pdf}
 \end{figure}
-\BDO{Prüfer algorithm applied on an example : TO DO}
+\BDO{Pr\"ufer algorithm applied on an example : TO DO}
 \end{example}
 
 \Guillaume{New section?}
@@ -274,51 +274,72 @@ This second algorithm terminates as the number of white vertices decreases stric
 \subsection{The Saneblidze--Umble description}
 
 Here we prove that the diagonal $\OP$ admits a combinatorial description completely analogous to that of the Saneblidze--Umble diagonal \cite{SaneblidzeUmble04}. 
-A direct corollary is that the two diagonals are isomorphic, and moreover that the SU diagonal can be obtained from a certain choice of chambers in the fundamental hyperplane arrangements of the permutahedra, resolving a conjecture made in \cite{LA21}.
+A direct corollary is that the two diagonals are in bijection, and moreover that the SU diagonal can be obtained from a certain choice of chambers in the fundamental hyperplane arrangements of the permutahedra, resolving a conjecture made in \cite{LA21}.
 In particular, this provides an alternative proof that all known diagonals on the associahedra agree \cite{saneblidzeComparingDiagonalsAssociahedra2022}.
 
 Given any permutation, one can canonically produce a facet of the diagonal in the following way. 
 
 \begin{definition}
-    A pair of ordered partitions $(\sigma,\tau)$ is called \emph{strong complementary} if $\sigma$ (resp. $\tau$) is obtained from a partition $p$ by merging adjacent elements which are descreasing (resp. increasing).
+    A pair of ordered partitions $(\sigma,\tau)$ is called \emph{strong complementary} if $\sigma$ is obtained from a permutation by merging the adjacent elements which are descreasing, and $\tau$ is obtained from the same permutation by merging the adjacent elements which are increasing.
 \end{definition}
 
+An example is shown in \cref{fig:strong-complementary}.
 The same argument as in \cref{l:u-well-defined} shows that the underlying pair of partitions is an essential complementary pair. 
 Moreover we see directly that any path between adjacent vertices has length $2$, and that its minimum is always traversed from left to right, hence all strong complementary pairs are in $\OP$. 
 
 \begin{figure}[h!]
-    \label{f:strong-complementary}
-    \caption{A strong complementary pair and its associated tree.}
+\begin{tikzpicture}[scale=.7]  
+\node (p) at (0, 0) {$2|5|37|146 \times 257|36|4|1$};
+\node (1) at (-1.5, -1) {$2$};
+\node (2) at (-1.5, -2) {$5$};
+\node (3) at (-1.5, -3) {$37$};
+\node (4) at (-1.5, -4) {$146$};
+%
+\node (5) at (1.5, -1) {$257$};
+\node (6) at (1.5, -2) {$36$};
+\node (7) at (1.5, -3) {$4$};
+\node (8) at (1.5, -4) {$1$};
+%
+\draw[-] (1)--(5); 
+\draw[-] (2)--(5); 
+\draw[-] (3)--(5); 
+\draw[-] (3)--(6); 
+\draw[-] (4)--(6); 
+\draw[-] (4)--(7); 
+\draw[-] (4)--(8);
+%
+\end{tikzpicture}
+\caption{The strong complementary pair associated to the partition $2|5|7|3|6|4|1$.}
+\label{fig:strong-complementary}
 \end{figure}
 
 There is a natural partial order on the facets of $\OP$. 
-We say that the set ${x,y}$, for $x,y \in [n], x<y$ is an \emph{inversion} of a facet $(\sigma,\tau)$ if $x$ and $y$ appear in $\sigma$ (resp. in $\tau$) from left to right (resp. from right to left) in separated blocks. 
+For two elements $x,y \in [n]$, we say that the set $\{x,y\}$ is an \emph{inversion} of a facet $(\sigma,\tau)$ if we have that $x<y$, the element $x$ appears before $y$ in $\sigma$, and the element $y$ appears before $x$ in $\tau$. 
 %Visually, they appear as $\cdots | \cdots x \cdots | \cdots | \cdots y \cdots | \cdots$ in $\sigma$ and as $\cdots | \cdots y \cdots | \cdots | \cdots x \cdots | \cdots$ in $\tau$. 
 
 \begin{definition}
-    We say that $(\sigma,\tau) \leq (\sigma',\tau')$ if the set of inversions of $(\sigma,\tau)$ is contained in the set of inversions of $(\sigma',\tau')$.
+    We say that two facets $(\sigma,\tau) \leq (\sigma',\tau')$ are comparable if the set of inversions of $(\sigma,\tau)$ is contained in the set of inversions of $(\sigma',\tau')$.
 \end{definition}
 
-It is immediate to see that this defines a poset, and even a lattice if a maximal element is added. 
-Visually, the inversions are given by the crossings of the edges in the bipartite tree. 
-In particular, the trees associated to strong complementary pairs have no crossings, as shown in \cref{f:strong-complementary}.
-These are the minimal elements in the poset. 
+It is immediate to see that this defines a poset.
+\Guillaume{and even a lattice if a maximal and a minimal element are added?} 
 
 \begin{proposition}
-    \label{p:crossings}
-    There is a bijection between partitions and facets of the diagonal with no crossings.
-    Thus, the facets with no crossings are precisely the strong complementary pairs. 
-    More generally, crossings are in bijection with inversions. 
-    Thus, stong complementary pairs are minimal elements in the poset. 
+\label{p:crossings}
+The set of inversions of a facet is in bijection with its set of edge crossings. 
+Moreover, the set of facets with no crossings is the set of strong complementary pairs. 
 \end{proposition}
 
 \begin{proof}
-    From the associated tree, which is non-crossing, just read the partition from the edges, from top to bottom.
-    The second part of the statement follows from the $|I|=|J|=1$ condition. [...]
+    For the first part of the statement, it is clear that every inversion gives rise to a crossing. 
+    For the converse, one needs to check that an anti-inversion, where $y$ appears before $x$ in $\sigma$ and $x$ appears before $y$ in $\tau$, cannot occur in a facet of $\OP$; this follows immediately from the $(I,J)$-conditions for $|I|=|J|=1$. 
+    The second part of the statement follows from the fact that facets of the diagonal with no crossings are in bijection with permutations.
+    As explained above, from a partition one obtains a strong complementary pair, which is in $\OP$. 
+    In the other way around, given a strong complementary pair, one can read-off the partition in the associated tree, which has no crossings, by going along the edges from top to bottom, see \cref{fig:strong-complementary}.
 \end{proof}
 
 
-We now characterize the cover relations of this poset. 
+We aim now at characterizing the cover relations of this poset. 
 Let $\sigma$ be an ordered partition.
 We say that a pair of adjacent blocks $\sigma_i | \sigma_{i+1}$ of $\sigma$ is \emph{admissible} if there is an element $\rho \in (\sigma_{i+1} \setminus \max\sigma_{i+1})$ with $\rho < \min \sigma_{i}$. 
 Such an element $\rho$ is said to be \emph{critical}. 
@@ -326,54 +347,88 @@ Let us define the \emph{left shift operator} $L$, which takes an admissible pair
 
 In the same fashion, the \emph{right shift operator} $R$ sends an element $\rho \in (\sigma_{i} \setminus \max\sigma_{i})$ with $\rho < \min \sigma_{i+1}$ one block to the right; the resulting ordered partition $R(\sigma)$ is such that $R(\sigma)_i := \sigma_i \setminus \rho$ and $R(\sigma)_{i+1} := \sigma_{i+1} \cup \ \rho$.
 
+\begin{definition}
+    The facets of the \emph{dual SU diagonal} are the pairs or ordered partitions that can be obtained from an strong complementary pair $(\sigma,\tau)$ by iterated applications of the left shift operator $L$ on the first term $\sigma$, and iterated applications of the right shift operator $R$ on the second term $\tau$. 
+\end{definition}
+
+As its name suggests, the dual SU diagonal is obtained from the definition of the SU diagonal \cite{SaneblidzeUmble04} by replacing "$\max$" with "$\min$" and the symbol "$>$" by the symbol "$<$", see the description following Example $1$ in \cite{saneblidzeComparingDiagonalsAssociahedra2022}.
+
 \begin{thm}
-    \label{t:cover-relations}
-    The cover relations of the poset of facets are precisely the pairs of the form $(\sigma,\tau) \prec (L(\sigma),\tau)$ and $(\sigma,\tau) \prec (\sigma,R(\tau))$ for some $L$ and $R$. 
+\label{t:iso-with-SU}
+    The facets of the diagonal $\OP$ and the facets of the dual SU diagonal are equal. 
 \end{thm}
 
 \begin{proof}
-First observe that we consider only the action of $L$ on the first term of the pair $(\sigma,\tau)$ and the action of $R$ on the second term. 
-Thus, we will prove the statement for $L$, the one for $R$ is similar. 
+Since we consider only the action of $L$ on the first term of the pair $(\sigma,\tau)$ and the action of $R$ on the second term, we will prove statements for $L$, the ones for $R$ are similar.
 
-Let us first we prove that the set $\OP$ is stable under $L$, i.e. that if $(\sigma,\tau) \in \OP$, then $(L(\sigma),\tau) \in \OP$. 
-We first show that for any admissible pair $\sigma_i | \sigma_{i+1}$ and critical element $\rho$, the unique path $\gamma$ between $\sigma_i$ and $\sigma_{i+1}$ is such that $\rho < \min \gamma$. 
-Indeed, the situation where $\rho > \max \gamma$ is impossible, since by hypothesis $\rho < \min \sigma_i$; and if $\rho$ was in $\gamma$, it would be traversed from right to left, contradicting the fact that $(\sigma,\tau) \in \OP$. 
-Thus, we must have $\rho < \min \gamma$. 
-With this result in hand, we observe that the paths in $(L(\sigma), \tau)$ are precisely the following: either they do not contain $\rho$, in which case they are paths of $(\sigma, \tau)$; or they do contain $\rho$, in which case they are obtained from paths in $(\sigma,\tau)$ by inserting at some place the unique path $\gamma$ between $\sigma_i$ and $\sigma_{i+1}$, or its inverse. 
-Since $\rho < \min \gamma$, adding the path $\gamma$ does not change the minima of the paths in $(L(\sigma), \tau)$, with respect to the ones in $(\sigma, \tau)$.
-Thus, all minima of paths in $(L(\sigma), \tau)$ are traversed from left to right, and we have $(L(\sigma), \tau) \in \OP$.
-
-Now we show that the left shift operator creates inversions, that is, for any $(\sigma, \tau) \in \OP$, we have that $(\sigma,\tau) \leq (L(\sigma),\tau)$. 
-First observe that shifting a critical element to the left in $\sigma$ cannot delete any inversion: if $x<y$ and $x$ precedes $y$ in $\sigma$, then $x$ must precedes $y$ also in $L(\sigma)$. 
-Now, we show that for $x<y$, if either $y$ comes before $x$ in $\sigma$, or both $x$ and $y$ are in the same block of $\sigma$, then $y$ must come before $x$ in $\tau$. 
-This follows immediately from the $(I,J)$-condition defining $\OP$ for $I=\{x\}$ and $J=\{y\}$. 
-The result then follows, since $\rho$ and $\max \sigma_{i+1}$ are in the same block of $\sigma$; thus $\max \sigma_{i+1}$ comes before $\rho$ in $\tau$ and the pair $(\rho,\max \sigma_{i+1})$ is an inversion of $(L(\sigma),\tau)$, which is not an inversion of $(\sigma,\tau)$. 
-
-From the preceding discussion, it is clear that if $(\sigma,\tau) \leq (\sigma',\tau) \leq (L(\sigma),\tau)$, then we have either $\sigma=\sigma'$ or $\sigma'=L(\sigma)$. 
-Indeed, if there is an inversion $(x,y)$ of $(L(\sigma),\tau)$ which is not an inversion of $(\sigma,\tau)$, then it must be that $x=\rho$. 
-In the contrary, we have $\sigma=\sigma'$, which completes the proof. 
-\end{proof}
-
-\begin{proposition}
-\label{p:iso-with-SU}
-The diagonal $\OP$ is isomorphic to the Saneblidze--Umble diagonal.
-In particular, they have the same number of facets. 
-\end{proposition}
-
-\Guillaume{Geometrically, this isomorphism is given by the symmetry...}
-
-\begin{proof}
-The poset described in \cref{t:cover-relations} is obtained from the definition of the SU diagonal by replacing "$\max$" with "$\min$" and the symbol "$>$" by "$<$" (see the description following Example $1$ in \cite{saneblidzeComparingDiagonalsAssociahedra2022}).
-It is thus clearly isomorphic to it. 
-Let us call it the dual SU diagonal. 
-The first part of the proof of \cref{t:cover-relations} shows that every pair in the dual SU diagonal is in $\OP$. 
-To establish the reverse inclusion, we show that every facet of $\OP$ is comparable to a strong complementary pair.
+First we show that every facet of $\OP$ is a facet of the dual SU diagonal. 
 Let $(\sigma,\tau)$ be a pair in $\OP$ and suppose that it satisfies the following property: for all pairs of consecutive blocks $\sigma_i | \sigma_{i+1}$ in $\sigma$, if $\min \sigma_i < \max \sigma_{i+1}$, then the unique path between $\sigma_i$ and $\sigma_{i+1}$ is given by $\{\min \sigma_i, \max \sigma_{i+1}\}$. 
 We claim that $(\sigma,\tau)$ must be a strong complementary pair. 
 To see this, suppose that $(\sigma,\tau)$ is \emph{not} a strong complementary pair; therefore by \cref{p:crossings} there exists an edge crossing. 
 This implies that there is a minimal crossing, i.e. a crossing between edges adjacent to two consecutive blocks $\sigma_i | \sigma_{i+1}$. 
 Since edges that are incident to a block are always in increasing order from bottom to top (this is a direct consequence of the $(I,J)$-conditions for $|I|=|J|=1$), there is a crossing between $\min \sigma_i$ and $\max \sigma_{i+1}$, which contradicts the property assumed above. 
 So, there is no crossing in $(\sigma,\tau)$ and according to \cref{p:crossings}, we have that $(\sigma,\tau)$ is a strong complementary pair. 
+The proof of the inclusion is now complete: if we are given a pair of facets $(\sigma,\tau)$ in $\OP$ which has at least one crossing, then there is at least one possible application of the inverse operators $L^{-1}$ or $R^{-1}$, and by induction we obtain a facet of the dual SU diagonal. 
+
+Second, we show that every facet of the dual SU diagonal is in $\OP$. 
+We already know that strong complementary pairs are in $\OP$. 
+Thus, it suffices to prove that if a dual SU pair $(\sigma,\tau)$ is in $\OP$, then $(L(\sigma),\tau)$ is also in $\OP$. 
+We first show that for any admissible pair $\sigma_i | \sigma_{i+1}$ and critical element $\rho$, the unique path $\gamma$ between $\sigma_i$ and $\sigma_{i+1}$ is such that $\rho < \min \gamma$. 
+We use induction on the number of applications of $L$. 
+The statement is clearly true for strong complementary pairs. 
+Suppose that it holds for $(\sigma,\tau)$. 
+We observe that the paths in $(L(\sigma), \tau)$ are precisely the following: either they do not contain $\rho$, in which case they are paths of $(\sigma, \tau)$; or they do contain $\rho$, in which case they are obtained from paths in $(\sigma,\tau)$ by inserting at some place the unique path $\gamma$ between $\sigma_i$ and $\sigma_{i+1}$, or its inverse. 
+Since $\rho < \min \gamma$, adding the path $\gamma$ does not change the minima of the paths in $(L(\sigma), \tau)$, with respect to the ones in $(\sigma, \tau)$.
+Now, the only element of $(L(\sigma),\tau)$ which might be critical and that was not already critical in $(\sigma,\tau)$ is the element $\rho$ that has just been shifted by $L$.
+Thus, any critical element of $(L(\sigma),\tau)$ which is different from $\rho$ satisfies the desired property. 
+If $\rho$ itself is critical in $(L(\sigma),\tau)$, we need to consider two cases. 
+
+If $\rho$ is in the unique path $\gamma'$ between $L(\sigma)_{i-1}=\sigma_{i-1}$ and $L(\sigma)_i=\sigma_i \cup \rho$, then 
+
+If $\rho$ is not in  $\gamma'$, then we must have $\rho < \min \gamma'$ since $\rho < \min (\sigma_{i-1} \cup \sigma_i)$.
+
+
+Thus, we must have $\rho < \min \gamma'$. 
+
+With this result in hand, 
+
+Thus, all minima of paths in $(L(\sigma), \tau)$ are traversed from left to right, and we have $(L(\sigma), \tau) \in \OP$.
+\end{proof}
+
+
+
+\begin{proposition}
+    \label{p:cover-relations}
+    The cover relations of the poset of facets are precisely the pairs of the form $(\sigma,\tau) \prec (L(\sigma),\tau)$ and $(\sigma,\tau) \prec (\sigma,R(\tau))$ for some $L$ and $R$. 
+\end{proposition}
+
+\begin{proof} 
+From the proof of \cref{t:iso-with-SU}, we know that for any facet $(\sigma,\tau) \in \OP$, we have that the pairs $(L(\sigma),\tau)$ and $(\sigma,R(\tau))$ are indeed facets of $\OP$. 
+
+We show first that the left shift operator creates inversions, that is, for any $(\sigma, \tau) \in \OP$, we have that $(\sigma,\tau) \leq (L(\sigma),\tau)$. 
+Observe that shifting a critical element to the left in $\sigma$ cannot delete any inversion: if $x<y$ and $x$ precedes $y$ in $\sigma$, then $x$ must precede $y$ also in $L(\sigma)$. 
+Now, we need to show that for $x<y$, if either $y$ comes before $x$ in $\sigma$, or both $x$ and $y$ are in the same block of $\sigma$, then $y$ must come before $x$ in $\tau$. 
+But this follows immediately from the $(I,J)$-condition for $I=\{x\}$ and $J=\{y\}$ defining $\OP$. 
+The result then follows, since $\rho$ and $\max \sigma_{i+1}$ are in the same block of $\sigma$; thus $\max \sigma_{i+1}$ comes before $\rho$ in $\tau$ and the pair $(\rho,\max \sigma_{i+1})$ is an inversion of $(L(\sigma),\tau)$, which is not an inversion of $(\sigma,\tau)$. 
+
+It remains to show that if $(\sigma,\tau) \leq (\sigma',\tau) \leq (L(\sigma),\tau)$, then we have either $\sigma=\sigma'$ or $\sigma'=L(\sigma)$. 
+Indeed, if there is an inversion $(x,y)$ of $(L(\sigma),\tau)$ which is not an inversion of $(\sigma,\tau)$, then it must be that $x=\rho$. 
+To the contrary, we have $\sigma=\sigma'$, which completes the proof. 
+\end{proof}
+
+One can thus interpret the left and right shift operators introduced by Saneblidze--Umble as generators of the poset of facets of the diagonal, with minimal elements the strong complementary pairs.
+
+Now, we end with two important consequences of the preceding results. 
+Consider the symmetry $s$ of the $(n-1)$-dimensional permutahedron, which consists in the reflection with respect to the hyperplane $x_1 + x_n = x_2 + x_{n-1}$. 
+It sends an ordered partition $\sigma:=\sigma_1 | \ldots | \sigma_k$ to the ordered partition $s\sigma:=n-\sigma_{k}+1 | \ldots | n-\sigma_{1}+1$, where $n-\sigma_i+1$ is the set $\{n-j+1 \ | \ j \in \sigma_i\}$. 
+
+\begin{corollary}
+\label{c:iso-with-SU}
+The diagonal action of the symmetry $s$ of the permutahedron, sending a pair $(\sigma,\tau)$ to the pair $(s\sigma,s\tau)$, defines a bijection between the terms of the diagonal $\OP$ and the terms of the Saneblidze--Umble diagonal.
+\end{corollary}
+
+\begin{proof}
+According to \cref{t:iso-with-SU}, it suffices to show that the symmetry $s$ sends the SU diagonal to the dual SU diagonal. 
 \end{proof}
 
 This allows us to prove a conjecture made in \cite[Remark 3.19]{LA21}.
@@ -383,7 +438,7 @@ This allows us to prove a conjecture made in \cite[Remark 3.19]{LA21}.
 \end{corollary}
 
 \begin{proof}
-    These orientation vectors are obtained precisely from the ones defining $\OP$ (see \cref{s:prelim}) via the symmetry described in \cref{p:iso-with-SU} above [...]. 
+    These orientation vectors are obtained precisely from the ones defining $\OP$ (see \cref{s:prelim}) via the symmetry described in \cref{c:iso-with-SU} above [...]. 
 \end{proof}
 
 This gives a geometric, alternative proof of the fact that all known diagonals of the associahedra agree \cite{saneblidzeComparingDiagonalsAssociahedra2022}.
@@ -400,4 +455,4 @@ This gives a geometric, alternative proof of the fact that all known diagonals o
 
 Here we show that $\OP$ and the $SU$ diagonal are isomorphic, and that they are the only two comultiplicative diagonals on the permutahedra that respect the weak Bruhat order on the vertices. (??)
 
-The isomorphism of \cref{p:iso-with-SU} is a comultiplicative isomorphism.
+The isomorphism of \cref{c:iso-with-SU} is a comultiplicative isomorphism.
